changed to football logo/stadium cards

--- a/index.html
+++ b/index.html
@@ -8,15 +8,27 @@
     <title>Flip Card</title>
 </head>
 <body>
-    <div class="container">
-        <div class="flip-card">
+    <div class="container epl">
+        <div class="flip-card arsenal">
             <div class="front"></div>
             <div class="back">Back Card</div>
         </div>
-        <div class="flip-card">
+        <div class="flip-card city">
             <div class="front"></div>
             <div class="back">Back Card</div>
         </div>
     </div>
+
+    <div class="container liga">
+        <div class="flip-card barca">
+            <div class="front"></div>
+            <div class="back">Back Card</div>
+        </div>
+        <div class="flip-card madrid">
+            <div class="front"></div>
+            <div class="back">Back Card</div>
+        </div>
+    </div>
+    
 </body>
 </html>
